--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,15 @@ spring:
     username: lpz
     password: lpz2003...
     url: jdbc:mysql://localhost:3306/graduation-project
+  # session失效时间，一天86400秒
+  session:
+    timeout: 86400
+    store-type: redis
+  # redis配置
+  redis:
+    port: 6379
+    host: localhost
+    database: 6
 server:
   port: 8080
   servlet:
